--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://larissabrito-dev.github.io/veroo.cafe/style.css" rel="stylesheet">
     </head>
 
     <body>
